--- a/src/ApplicationUI/supervisorDashboard.fxml
+++ b/src/ApplicationUI/supervisorDashboard.fxml
@@ -102,6 +102,11 @@
                           </font>
                       </Label>
                   <Separator layoutY="75.0" prefHeight="0.0" prefWidth="800.0" />
+                  <ImageView fx:id="logOutButton" fitHeight="58.0" fitWidth="55.0" layoutX="731.0" layoutY="12.0" onMouseClicked="#logOut" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/logOut.png" />
+                     </image>
+                  </ImageView>
                </children>
             </AnchorPane>
             </children>
