--- a/src/ApplicationUI/supervisorDashboard.fxml
+++ b/src/ApplicationUI/supervisorDashboard.fxml
@@ -16,7 +16,7 @@
     <center>
         <AnchorPane prefHeight="510.0" prefWidth="800.0" styleClass="background" stylesheets="@application.css" BorderPane.alignment="CENTER">
             <children>
-                <Pane layoutX="170.0" layoutY="104.0" prefHeight="228.0" prefWidth="460.0" style="-fx-background-radius: 25; -fx-background-color: #4c5a6b;" styleClass="code" stylesheets="@application.css">
+                <Pane layoutX="170.0" layoutY="31.0" prefHeight="228.0" prefWidth="460.0" style="-fx-background-radius: 25; -fx-background-color: #4c5a6b;" styleClass="code" stylesheets="@application.css">
                     <children>
                         <Button fx:id="viewProjectButton" layoutX="286.0" layoutY="22.0" mnemonicParsing="false" onAction="#viewProjects" prefHeight="39.0" prefWidth="145.0" stylesheets="@application.css" text="View Projects" textFill="WHITE">
                             <styleClass>
@@ -57,7 +57,7 @@
                      </font>
                   </Text>
                     </children></Pane>
-                <Pane layoutX="168.0" layoutY="343.0" prefHeight="235.0" prefWidth="464.0" style="-fx-background-color: #4c5a6b; -fx-background-radius: 25;" stylesheets="@application.css">
+                <Pane layoutX="168.0" layoutY="270.0" prefHeight="235.0" prefWidth="464.0" style="-fx-background-color: #4c5a6b; -fx-background-radius: 25;" stylesheets="@application.css">
                     <children>
                         <Button fx:id="modifyTeamButton" layoutX="267.0" layoutY="20.0" mnemonicParsing="false" onAction="#modifyTeam" prefHeight="39.0" prefWidth="170.0" stylesheets="@application.css" text="Modify Team" textFill="WHITE">
                             <styleClass>
@@ -94,22 +94,24 @@
                   </Button>
                     </children>
                 </Pane>
-            <AnchorPane prefHeight="76.0" prefWidth="800.0" styleClass="titleBannerBackground" stylesheets="@application.css">
-               <children>
-                      <Label alignment="CENTER" layoutX="21.0" layoutY="17.0" prefHeight="42.0" prefWidth="378.0" stylesheets="@application.css" text="Supervisor Dashboard" textFill="WHITE">
-                          <font>
-                              <Font name="SansSerif Regular" size="36.0" />
-                          </font>
-                      </Label>
-                  <Separator layoutY="75.0" prefHeight="0.0" prefWidth="800.0" />
-                  <ImageView fx:id="logOutButton" fitHeight="58.0" fitWidth="55.0" layoutX="731.0" layoutY="12.0" onMouseClicked="#logOut" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../images/logOut.png" />
-                     </image>
-                  </ImageView>
-               </children>
-            </AnchorPane>
             </children>
         </AnchorPane>
     </center>
+   <top>
+      <AnchorPane prefHeight="76.0" prefWidth="800.0" styleClass="titleBannerBackground" stylesheets="@application.css" BorderPane.alignment="CENTER">
+         <children>
+                <Label alignment="CENTER" layoutX="21.0" layoutY="17.0" prefHeight="42.0" prefWidth="378.0" stylesheets="@application.css" text="Supervisor Dashboard" textFill="WHITE">
+                    <font>
+                        <Font name="SansSerif Regular" size="36.0" />
+                    </font>
+                </Label>
+            <Separator layoutY="75.0" prefHeight="0.0" prefWidth="800.0" />
+            <ImageView fx:id="logOutButton" fitHeight="58.0" fitWidth="55.0" layoutX="731.0" layoutY="12.0" onMouseClicked="#logOut" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/logOut.png" />
+               </image>
+            </ImageView>
+         </children>
+      </AnchorPane>
+   </top>
 </BorderPane>
