--- a/src/ApplicationUI/createProject.fxml
+++ b/src/ApplicationUI/createProject.fxml
@@ -4,88 +4,76 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
-<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" styleClass="background" stylesheets="@application.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ApplicationUI.createProjectController">
-    <children>
-        <AnchorPane prefHeight="605.0" prefWidth="800.0">
-            <children>
-                <SplitPane layoutY="-1.0" prefHeight="606.0" prefWidth="806.0" styleClass="background" stylesheets="@application.css">
-                    <items>
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" SplitPane.resizableWithParent="false">
+
+<BorderPane xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ApplicationUI.createProjectController">
+   <center>
+                <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="512.0" prefWidth="806.0" styleClass="background" stylesheets="@application.css">
+                    <children>
+                        <Separator layoutY="1.0" prefHeight="2.0" prefWidth="806.0" />
+                        <Pane layoutX="169.0" layoutY="233.0" prefHeight="179.0" prefWidth="467.0" styleClass="card" stylesheets="@application.css">
                             <children>
-                                <AnchorPane>
-                                    <children>
-                                        <AnchorPane layoutY="-2.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="94.0" prefWidth="806.0" styleClass="titleBannerBackground" stylesheets="@application.css">
-                                            <children>
-                                                <Label layoutX="35.0" layoutY="25.0" styleClass="font" stylesheets="@application.css" text="Create Project" textAlignment="CENTER" textFill="WHITE">
-                                                    <font>
-                                                        <Font size="36.0" />
-                                                    </font>
-                                                </Label>
-                                                <ImageView fitHeight="81.0" fitWidth="69.0" layoutX="723.0" layoutY="7.0" pickOnBounds="true">
-                                                    <image>
-                                                        <Image url="@../images/supervisorDashManageProj.png" />
-                                                    </image>
-                                                </ImageView>
-                                                <Text layoutX="740.0" layoutY="38.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Create" textAlignment="CENTER" />
-                                            </children>
-                                        </AnchorPane>
-                                        <AnchorPane layoutX="-1.0" layoutY="92.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="512.0" prefWidth="806.0" styleClass="background" stylesheets="@application.css">
-                                            <children>
-                                                <Separator layoutY="1.0" prefHeight="2.0" prefWidth="806.0" />
-                                                <Pane layoutX="169.0" layoutY="233.0" prefHeight="179.0" prefWidth="467.0" styleClass="card" stylesheets="@application.css">
-                                                    <children>
-                                                        <Button fx:id="goBackButton" layoutX="251.0" layoutY="127.0" mnemonicParsing="false" onAction="#gotoSupervisorDashboard" prefHeight="34.0" prefWidth="122.0" stylesheets="@application.css" text="Go Back" textFill="WHITE">
-                                                            <styleClass>
-                                                                <String fx:value="Button" />
-                                                                <String fx:value="font" />
-                                                                <String fx:value="secondaryButton" />
-                                                            </styleClass>
-                                                        </Button>
-                                                        <Label fx:id="taskNameLabel" layoutX="26.0" layoutY="23.0" styleClass="font" stylesheets="@application.css" text="Enter FYP Name:" textFill="WHITE">
-                                                            <font>
-                                                                <Font size="24.0" />
-                                                            </font>
-                                                        </Label>
-                                                        <TextField fx:id="fypNameField" layoutX="227.0" layoutY="26.0" prefHeight="26.0" prefWidth="229.0" />
-                                                        <Button fx:id="createProjectButton" layoutX="94.0" layoutY="126.0" mnemonicParsing="false" onAction="#createProject" prefHeight="34.0" prefWidth="139.0" stylesheets="@application.css" text="Next">
-                                                            <styleClass>
-                                                                <String fx:value="Button" />
-                                                                <String fx:value="font" />
-                                                                <String fx:value="primaryButton" />
-                                                            </styleClass>
-                                                        </Button>
-                                                        <Text fx:id="errorTextField" fill="RED" layoutX="223.0" layoutY="326.0" strokeType="OUTSIDE" strokeWidth="0.0" />
-                                                        <Label fx:id="taskNameLabel1" layoutX="72.0" layoutY="65.0" styleClass="font" stylesheets="@application.css" text="Enter Status:" textFill="WHITE">
-                                                            <font>
-                                                                <Font size="24.0" />
-                                                            </font>
-                                                        </Label>
-                                                        <TextField fx:id="fypStatusField" layoutX="227.0" layoutY="65.0" prefHeight="26.0" prefWidth="229.0" />
-                                                        <Text fx:id="createErrorMsg" fill="RED" layoutX="223.0" layoutY="123.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" />
-                                                    </children>
-                                                </Pane>
-                                                <ImageView fitHeight="160.0" fitWidth="258.0" layoutX="274.0" layoutY="81.0" pickOnBounds="true" preserveRatio="true">
-                                                    <image>
-                                                        <Image url="@../images/createProjectRobot.png" />
-                                                    </image>
-                                                </ImageView>
-                                            </children>
-                                        </AnchorPane>
-                                    </children>
-                                </AnchorPane>
-                            </children></AnchorPane>
-                    </items>
-                </SplitPane>
-            </children>
-        </AnchorPane>
-    </children>
-</AnchorPane>
+                                <Button fx:id="goBackButton" layoutX="251.0" layoutY="127.0" mnemonicParsing="false" onAction="#gotoSupervisorDashboard" prefHeight="34.0" prefWidth="122.0" stylesheets="@application.css" text="Go Back" textFill="WHITE">
+                                    <styleClass>
+                                        <String fx:value="Button" />
+                                        <String fx:value="font" />
+                                        <String fx:value="secondaryButton" />
+                                    </styleClass>
+                                </Button>
+                                <Label fx:id="taskNameLabel" layoutX="26.0" layoutY="23.0" styleClass="font" stylesheets="@application.css" text="Enter FYP Name:" textFill="WHITE">
+                                    <font>
+                                        <Font size="24.0" />
+                                    </font>
+                                </Label>
+                                <TextField fx:id="fypNameField" layoutX="227.0" layoutY="26.0" prefHeight="26.0" prefWidth="229.0" />
+                                <Button fx:id="createProjectButton" layoutX="94.0" layoutY="126.0" mnemonicParsing="false" onAction="#createProject" prefHeight="34.0" prefWidth="139.0" stylesheets="@application.css" text="Next">
+                                    <styleClass>
+                                        <String fx:value="Button" />
+                                        <String fx:value="font" />
+                                        <String fx:value="primaryButton" />
+                                    </styleClass>
+                                </Button>
+                                <Text fx:id="errorTextField" fill="RED" layoutX="223.0" layoutY="326.0" strokeType="OUTSIDE" strokeWidth="0.0" />
+                                <Label fx:id="taskNameLabel1" layoutX="72.0" layoutY="65.0" styleClass="font" stylesheets="@application.css" text="Enter Status:" textFill="WHITE">
+                                    <font>
+                                        <Font size="24.0" />
+                                    </font>
+                                </Label>
+                                <TextField fx:id="fypStatusField" layoutX="227.0" layoutY="65.0" prefHeight="26.0" prefWidth="229.0" />
+                                <Text fx:id="createErrorMsg" fill="RED" layoutX="223.0" layoutY="123.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" />
+                            </children>
+                        </Pane>
+                        <ImageView fitHeight="160.0" fitWidth="258.0" layoutX="274.0" layoutY="81.0" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@../images/createProjectRobot.png" />
+                            </image>
+                        </ImageView>
+                    </children>
+                </AnchorPane>
+   </center>
+   <top>
+                <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="94.0" prefWidth="806.0" styleClass="titleBannerBackground" stylesheets="@application.css" BorderPane.alignment="CENTER">
+                    <children>
+                        <Label layoutX="35.0" layoutY="25.0" styleClass="font" stylesheets="@application.css" text="Create Project" textAlignment="CENTER" textFill="WHITE">
+                            <font>
+                                <Font size="36.0" />
+                            </font>
+                        </Label>
+                        <ImageView fitHeight="81.0" fitWidth="69.0" layoutX="723.0" layoutY="7.0" pickOnBounds="true">
+                            <image>
+                                <Image url="@../images/supervisorDashManageProj.png" />
+                            </image>
+                        </ImageView>
+                        <Text layoutX="740.0" layoutY="38.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Create" textAlignment="CENTER" />
+                    </children>
+                </AnchorPane>
+   </top>
+</BorderPane>
