--- a/src/ApplicationUI/suggestTask.fxml
+++ b/src/ApplicationUI/suggestTask.fxml
@@ -26,7 +26,7 @@
                                     <children>
                                         <AnchorPane layoutY="-2.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="94.0" prefWidth="806.0" styleClass="titleBannerBackground" stylesheets="@application.css">
                                             <children>
-                                                <Label layoutX="35.0" layoutY="25.0" styleClass="font" stylesheets="@application.css" text="Suggest New Task" textAlignment="CENTER" textFill="WHITE">
+                                                <Label layoutX="35.0" layoutY="25.0" styleClass="font" stylesheets="@application.css" text="New Task" textAlignment="CENTER" textFill="WHITE">
                                                     <font>
                                                         <Font size="36.0" />
                                                     </font>
