--- a/src/ApplicationUI/viewProjects.fxml
+++ b/src/ApplicationUI/viewProjects.fxml
@@ -9,26 +9,14 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" styleClass="background" stylesheets="@application.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ApplicationUI.viewProjectsController">
-    <children>
-        <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="92.0" prefWidth="800.0" styleClass="titleBannerBackground" stylesheets="@application.css">
-            <children>
-                <Label layoutX="20.0" layoutY="27.0" styleClass="font" stylesheets="@application.css" text="View Final Year Projects" textAlignment="CENTER" textFill="WHITE">
-                    <font>
-                        <Font size="36.0" />
-                    </font>
-                </Label>
-                <ImageView fitHeight="83.0" fitWidth="111.0" layoutX="703.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
-                    <image>
-                        <Image url="@../images/memberTaskTopRight.gif" />
-                    </image>
-                </ImageView>
-            </children>
-        </AnchorPane>
-        <AnchorPane layoutY="82.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="511.0" prefWidth="800.0" styleClass="background" stylesheets="@application.css">
+
+<BorderPane xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ApplicationUI.viewProjectsController">
+   <center>
+        <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="511.0" prefWidth="800.0" styleClass="background" stylesheets="@application.css">
             <children>
                 <Separator layoutY="-1.0" prefHeight="0.0" prefWidth="800.0" />
                 <Pane layoutX="98.0" layoutY="10.0" prefHeight="491.0" prefWidth="604.0" styleClass="card" stylesheets="@application.css">
@@ -52,5 +40,21 @@
                 </Pane>
             </children>
         </AnchorPane>
-    </children>
-</AnchorPane>
+   </center>
+   <top>
+        <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="92.0" prefWidth="800.0" styleClass="titleBannerBackground" stylesheets="@application.css" BorderPane.alignment="CENTER">
+            <children>
+                <Label layoutX="20.0" layoutY="27.0" styleClass="font" stylesheets="@application.css" text="View Final Year Projects" textAlignment="CENTER" textFill="WHITE">
+                    <font>
+                        <Font size="36.0" />
+                    </font>
+                </Label>
+                <ImageView fitHeight="83.0" fitWidth="111.0" layoutX="703.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
+                    <image>
+                        <Image url="@../images/memberTaskTopRight.gif" />
+                    </image>
+                </ImageView>
+            </children>
+        </AnchorPane>
+   </top>
+</BorderPane>
