--- a/src/ApplicationUI/createMeeting.fxml
+++ b/src/ApplicationUI/createMeeting.fxml
@@ -36,14 +36,14 @@
                   <MenuButton fx:id="selectTeam_MenuButton" layoutX="267.0" layoutY="197.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="147.0" text="Select Team " />
                   <TextField fx:id="date_textField" layoutX="266.0" layoutY="228.0" promptText="Meeting Date" />
                   <TextField fx:id="time_textField" layoutX="266.0" layoutY="264.0" promptText="Meeting Time" />
-                  <Button fx:id="createProjectButton" layoutX="271.0" layoutY="353.0" mnemonicParsing="false" onAction="#createMeeting" prefHeight="34.0" prefWidth="139.0" stylesheets="@application.css" text="Create">
+                  <Button fx:id="createProjectButton" layoutX="298.0" layoutY="353.0" mnemonicParsing="false" onAction="#createMeeting" prefHeight="34.0" prefWidth="98.0" stylesheets="@application.css" text="Create">
                      <styleClass>
                         <String fx:value="Button" />
                         <String fx:value="font" />
                         <String fx:value="primaryButton" />
                      </styleClass>
                   </Button>
-                  <Button fx:id="goBackButton" layoutX="83.0" layoutY="353.0" mnemonicParsing="false" onAction="#goBack" prefHeight="34.0" prefWidth="122.0" stylesheets="@application.css" text="Go Back" textFill="WHITE">
+                  <Button fx:id="goBackButton" layoutX="83.0" layoutY="353.0" mnemonicParsing="false" onAction="#goBack" prefHeight="34.0" prefWidth="96.0" stylesheets="@application.css" text="Go Back" textFill="WHITE">
                      <styleClass>
                         <String fx:value="Button" />
                         <String fx:value="font" />
@@ -57,6 +57,13 @@
                   </Label>
                   <Label layoutX="267.0" layoutY="92.0" styleClass="font" stylesheets="@application.css" text="Supervisor" textFill="WHITE" />
                   <MenuButton fx:id="selectSUP_MenuButton" layoutX="267.0" layoutY="109.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="147.0" text="Select Supervisor" />
+                  <Button fx:id="createProjectButton1" layoutX="194.0" layoutY="353.0" mnemonicParsing="false" onAction="#gotoViewMeetings" prefHeight="34.0" prefWidth="88.0" style="-fx-font-size: 14;" stylesheets="@application.css" text="View All">
+                     <styleClass>
+                        <String fx:value="Button" />
+                        <String fx:value="font" />
+                        <String fx:value="primaryButton" />
+                     </styleClass>
+                  </Button>
                </children>
             </Pane>
          </children>
