--- a/src/ApplicationUI/viewMeetings.fxml
+++ b/src/ApplicationUI/viewMeetings.fxml
@@ -31,12 +31,18 @@
                         <TableColumn fx:id="locationColumn" minWidth="0.0" prefWidth="119.0" text="Location" />
                         <TableColumn fx:id="dateColumn" minWidth="0.0" prefWidth="58.0" text="Date" />
                         <TableColumn fx:id="timeColumn" prefWidth="65.0" text="Time" />
-                        <TableColumn fx:id="teamIDColumn" prefWidth="198.0" text="Team ID" />
                      </columns>
                   </TableView>
-                  <Button fx:id="backButton" layoutX="333.0" layoutY="449.0" mnemonicParsing="false" onAction="#goBack" prefHeight="34.0" prefWidth="100.0" style="-fx-font-size: 18;" stylesheets="@application.css" text="Go Back" textFill="WHITE">
+                  <Button fx:id="backButton" layoutX="259.0" layoutY="449.0" mnemonicParsing="false" onAction="#goBack" prefHeight="34.0" prefWidth="100.0" style="-fx-font-size: 18;" stylesheets="@application.css" text="Go Back" textFill="WHITE">
                      <styleClass>
                         <String fx:value="secondaryButton" />
+                        <String fx:value="Button" />
+                        <String fx:value="font" />
+                     </styleClass>
+                  </Button>
+                  <Button fx:id="backButton1" layoutX="399.0" layoutY="449.0" mnemonicParsing="false" onAction="#gotoCreateMeeting" prefHeight="34.0" prefWidth="151.0" style="-fx-font-size: 18;" stylesheets="@application.css" text="Create Meeting" textFill="WHITE">
+                     <styleClass>
+                        <String fx:value="primaryButton" />
                         <String fx:value="Button" />
                         <String fx:value="font" />
                      </styleClass>
